2008-12-30  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: add code to check the cpu type of Mac OS X
	    libclntsh.dylib.

2008-12-14  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in:
	    1. fix to fetch a rowid column as s String.
	    2. change the return type of OCI8::Cursor#rowid from OCIRowid
	       to String. It is a local call on Oracle 9.0 or upper.
	       But on Oracle 8.x client, it needs one network roundtrip
	       to convert OCIRowid to String on server side.
	    3. fix OCI8#describe_table to prevent OCIStillExecuting when
	       non-blocking mode is enabled and it needs a time to
	       retrieve table information.
	* ext/oci8/extconf.rb, ext/oci8/oci8.c: add OCIRowid#to_s
	    when OCIRowidToChar() is available.
	* test/test_all.rb, test/test_rowid.rb: add a rowid test case.
	* test/test_dbi_clob.rb: fix to pass tests when the test directory
	    path is too long.

2008-08-10  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 1.0.2 and 1.0.3.
	* VERSION: change version to 1.0.3.
	* ext/oci8/lob.c: add workaround code for a losing character problem
	    when reading CLOB. The problem is happened at the following condition.
	    1. Oracle client version is 10.2.0.4 or 11.1.0.6.
	       (It doesn't depend on Oracle server version.)
	    2. The character set is a variable-length one (e.g. AL32UTF8).
	    (This probmem was reported by Efren Yevale and Thomas Witt and
	     fixed with Thomas Witt's help.)

2008-08-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/lob.c: fix OCILobLocator#getLength for a lob over 1GB,
	    which affect OCI8::LOB#size and OCI8::LOB#read. fix
	    OCILobLocator#read and OCILobLocator#write to set offset over 2GB,
	    which affect OCI8::LOB#read and OCI8::LOB#write.
	    (This probmem was reported by Jonathan Hadders.)

2008-07-12  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: (1) add #to_json to OraDate too.
	    (2) fix a bug when using Oracle 8i and dbd. OCI_ATTR_FSPRECISION